<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mainUser"
            type="com.candlestickschart.wayanad.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IndividualDetail"
        android:background="@drawable/bg">
        <include layout="@layout/header"
            android:id="@+id/top"
            bind:username="@{mainUser}"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:id="@+id/voterDetail"
            android:layout_below="@id/top"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/voterDetail"
            android:layout_above="@id/bottomLay">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/rationLay">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/residenceText"
                    android:layout_marginTop="20dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left"
                    android:id="@+id/topText"
                    android:layout_below="@id/top"
                    />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/topText"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/residenceButton1"
                        android:textAllCaps="false"
                        android:gravity="left|center_vertical"
                        android:textSize="20dp"
                        android:background="@null"
                        android:id="@+id/yes"
                        />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/residenceButton2"
                        android:textAllCaps="false"
                        android:gravity="left|center_vertical"
                        android:textSize="20dp"
                        android:background="@null"
                        android:id="@+id/no"
                        />

                </RadioGroup>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/residence"
                    android:background="@drawable/edit_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="20dp"
                    android:id="@+id/currentResidence"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/voterDOB"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:background="@drawable/edit_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="20dp"
                    android:id="@+id/dob"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/residenceAnni"
                    android:background="@drawable/edit_bg"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="20dp"
                    android:id="@+id/anniversary"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/residenceMobile"
                    android:background="@drawable/edit_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="20dp"
                    android:id="@+id/mobile"
                    android:inputType="phone"
                    android:maxLength="10"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_bg"
                    android:id="@+id/sameWhatsapp"
                    android:text="same"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/residenceWhatsapp"
                    android:background="@drawable/edit_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="20dp"
                    android:id="@+id/whastapp"
                    android:inputType="phone"
                    android:maxLength="10"
                    />

            </LinearLayout>
        </ScrollView>


        <include layout="@layout/bottom"
            android:id="@+id/bottomLay"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"/>


    </RelativeLayout>
</layout>