<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mainUser"
            type="com.candlestickschart.wayanad.User" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchVoter">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/header"
                    bind:username="@{mainUser}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:text="@string/searchNote"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/searchString"
                    android:hint="@string/searchVoterEdittext"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:text=""
                    android:layout_marginRight="30dp"
                    android:background="@drawable/edit_bg"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/login"
                    android:text="@string/searchVoterButtontext"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:background="@drawable/newsample"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_marginTop="20dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/upload"
                    android:text="@string/uploadButton"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/newsample"
                    android:layout_marginTop="20dp"/>


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/logout"
                    android:text="Logout"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/redcolor"
                    android:layout_marginTop="20dp"/>



            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
</layout>
