<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mainUser"
            type="com.candlestickschart.wayanad.User" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DownloadVoterList">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/header"
                    bind:username="@{mainUser}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="#000"
                    android:text="@string/downloadNote"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_bg"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/vsNo"
                        android:background="@null"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_bg"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/boothNo"
                        android:background="@null"
                        android:hint="Enter Booth Number"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/download"
                    android:text="@string/downloadBtn"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/newsample"
                    android:layout_marginTop="20dp"/>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:id="@+id/upload"
                    android:text="@string/uploadButton"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:background="@drawable/newsample"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"/>



            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
</layout>