<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mainUser"
            type="com.candlestickschart.wayanad.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewVoter"
        android:background="@drawable/bg">
        <include layout="@layout/header"
            android:id="@+id/top"
            bind:username="@{mainUser}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/top"
            android:layout_marginTop="20dp"
            android:id="@+id/rationLay">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/voterName"
                android:background="@drawable/edit_bg"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:id="@+id/name"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_bg"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/gender"
                    android:entries="@array/gender"/>

            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/voterDOB"
                android:background="@drawable/edit_bg"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:id="@+id/dob"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/voterMobile"
                android:background="@drawable/edit_bg"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:id="@+id/mobile"
                android:inputType="phone"
                android:maxLength="10"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="Enter form number"
                android:background="@drawable/edit_bg"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="20dp"
                android:id="@+id/formNumber"
                android:inputType="phone"
                android:maxLength="10"
                />

        </LinearLayout>

        <include layout="@layout/bottom"
            android:id="@+id/bottomLay"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"/>


    </RelativeLayout>
</layout>